[package]
name = "counter_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = {version = "0.28.0", features = ["blob"]}
inputbot = "0.5.1"
image = "0.24.3"
reqwest = {version = "0.11.11", features = ["blocking", "json"]}
bytes = "1.2.1"
eframe = "0.19.0"
egui_extras = {version = "0.19.0", features= ["image"]}

[dev-dependencies]
float-cmp = "0.9.0"